2.6.0 - "Usability"
	* Removed functionality:
	  - Transitional code from the previous release
	  - autogen.sh in favour of autoreconf(1)

2.5.0 - "Consolidation"
	* Autotools and packaging changes:
	  - Upgraded autoconf version requirement to 2.60
	  - Added '--with-alsa' to suppress ALSA sound driver inclusion
	  - Added '--without-oss' to suppress OSS sound driver inclusion
	  - Added '--disable-cache' to remove tags cache support
	  - Added specific GDB support to '--enable-debug'
	  - Refactor decoder plug-ins' autoconf scripts into source directories
	  - Ensure that all decoders get into the source distribution tarball
	  - Removed SID decoder's dependance on .la-file presence
	  - Removed distribution-specific .spec file
	  - Minor reformatting of the configure summary
	  - Added warnings for various deprecations and potential problems
	  - Added warnings for unmet future package requirements
	  - Updated GNU boilerplate text
	* Improved support for embedded systems:
	  - Refined FFmpeg decoder configuration for use with cross-compilation
	  - Provided use of Tremor with the Vorbis decoder
	  - Improve portability to non-GNU library platforms
	  - Added --with-libiconv-prefix configure option
	* Audio driver changes:
	  - Allow use of the OSSv4 per-application mixer API
	  - Provided SNDIO support for OpenBSD systems (Alexander Polakov)
	* New and changed audio decoders:
	  - New TiMidity decoder for MIDI (Hendrik Iben)
	  - Migrate AAC decoder to later FAAD2 API (Max Klinger)
	  - Added AAC+ (HE-AAC) support to AAC decoder
	  - New SidPlay2 decoder for SID (Hendrik Iben)
	  - New Modplug decoder (Hendrik Iben)
	  - New WavPack decoder (Alexandrov Sergey)
	  - Renamed SndFile plugin for consistancy
	  - Removed M4A format support from AAC decoder plugin
	  - Removed WAV format support from ModPlug decoder plugin
	  - Detect huge files in certain formats which SndFile cannot play
	  - Improved (drastically in some cases) the accuracy of AAC durations