@@ -484,14 +484,6 @@ then
 	echo
 fi
 
-if test "x$FFMPEG_CONFIG" = "xyes"
-then
-	echo "WARNING: Use of Debian's ffmpeg-config is deprecated;"
-	echo "         please upgrade FFmpeg or it's libraries to a version"
-	echo "         using pkg-config (FFmpeg release 0.5 or later)."
-	echo
-fi
-
 if test "x$BDB4_DEPRECATED" = "xyes"
 then
 	echo "WARNING: After release 2.5 MOC will require Berkeley DB release"
