@@ -69,9 +69,6 @@ GCC_DIAG_ON(deprecated-declarations)
 #ifdef HAVE_AV_GET_CHANNEL_LAYOUT_NB_CHANNELS
 #include <libavutil/audioconvert.h>
 #endif
-#else
-#include <ffmpeg/avformat.h>
-#endif
 
 /* FFmpeg also likes common names, without that, our common.h and log.h
  * would not be included. */
