@@ -2,6 +2,7 @@
 	* Removed functionality:
 	  - Transitional code from the previous release
 	  - autogen.sh in favour of autoreconf(1)
+	  - Deprecated ffmpeg-config support
 
 2.5.0 - "Consolidation"
 	* Autotools and packaging changes:
